Fixed bug that made the page heading look squished

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -390,10 +390,6 @@ a:focus {
     min-width: 75px;
   }
 
-  .big-page-title {
-    line-height: 0%;
-  }
-
   .result-box {
     grid-template-columns: 1fr;
   }
